--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,40 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container-fluid {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background-color: blueviolet;
+}
+
+.container {
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    height: 60%;
+    background-color: red;
+}
+
+.big-picture {
+    width: 80%;
+    height: 100%;
+    background-color: coral;
+}
+
+.slider {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    height: 100%;
+    background-color: darkgreen;
+}
+
+.small-picture {
+    width: 100%;
+    height: 20%;
+}
