--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,17 @@
     background-color: coral;
 }
 
+.big-picture img {
+    display: none;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.big-picture img.active {
+    display: block;
+}
+
 .slider {
     display: flex;
     flex-direction: column;
