--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background-color: blueviolet;
 }
 
 .container {
@@ -19,7 +18,6 @@
     transform: translate(-50%, -50%);
     width: 80%;
     height: 60%;
-    background-color: red;
 }
 
 /* Images */
@@ -45,18 +43,23 @@
     flex-direction: column;
     width: 20%;
     height: 100%;
-    background-color: darkgreen;
+    background-color: black;
 }
 
 .small-picture {
     width: 100%;
     height: 20%;
+    opacity: 0.5;
 }
 
 .small-picture img{
     object-fit: cover;
     width: 100%;
     height: 100%;
+}
+
+.small-picture.brightness {
+    opacity: 1;
 }
 /* End Images */
 
@@ -67,11 +70,6 @@
     left: 89%;
     font-size: 1.5em;
     color: white;
-    display: none;
-}
-
-.able {
-    display: block;
 }
 
 .next {
